--- a/a_partial_archive_of_staring/s.css
+++ b/a_partial_archive_of_staring/s.css
@@ -11,8 +11,9 @@ body {
     color: #f2f2f2;
     font-size: 2.3rem;
     margin: 0;
+    margin-top: 400px;
     margin-right: 400px;
-    margin-left: 100px;
+    margin-left: 150px;
 }
 
 span {
