--- a/a_partial_archive_of_staring/s.css
+++ b/a_partial_archive_of_staring/s.css
@@ -11,6 +11,7 @@ body {
     color: #f2f2f2;
     font-size: 2.3rem;
     margin: 0;
+    margin-top: 100px;
     margin-right: 400px;
     margin-left: 150px;
 }
