--- a/dont_forget_your_belongings/s.css
+++ b/dont_forget_your_belongings/s.css
@@ -1,21 +1,22 @@
 @font-face {
-    font-family: 'Noto Sans';
-    src: url('Noto_Sans/NotoSans-Regular.ttf') format('truetype');
+   font-family: 'Noto Sans';
+   src: url('Noto_Sans/NotoSans-Regular.ttf') format('truetype');
 }
 
 body {
-    font-family: 'Noto Sans', sans-serif;
-    text-rendering: optimizeLegibility;
-    background-color: black;
-    color: yellow;
-    font-size: 1.8rem;
-    margin: 0;
-    cursor: none;
+   font-family: 'Noto Sans', sans-serif;
+   text-rendering: optimizeLegibility;
+   background-color: black;
+   color: yellow;
+   font-size: 2rem;
+   margin: 0;
+   margin: 0 10%;
+   cursor: none;
 }
 
 span {
-    position: fixed;
-    text-align: center;
-    bottom: 50px;
-    width: 80%;
+   position: fixed;
+   text-align: center;
+   bottom: 150px;
+   width: 80%;
 }
