--- a/s.css
+++ b/s.css
@@ -20,9 +20,9 @@
    display: inline-block;
    float: left;
    width: 50%;
-   margin-top: 38px;
-   font-size: 32px;
-   line-height: 42px;
+   margin-top: 32px;
+   font-size: 28px;
+   line-height: 32px;
 }
 
 .left p {
@@ -41,8 +41,8 @@
    width: 50%;
    text-align: left;
    font-family: 'GT-Sectra', serif;
-   font-size: 36px;
-   line-height: 43px;
+   font-size: 28px;
+   line-height: 32px;
    margin-bottom: 70px;
 }
 
@@ -51,7 +51,7 @@ body {
    -webkit-font-smoothing: antialiased;
    margin: 0;
    margin: 10% 10%;
-   margin-top: 300px;
+   margin-top: 50px;
    color: #999999;
    background-color: #150058;
 }
@@ -64,4 +64,18 @@ ul {
 li {
    padding-left: 1.28571429em;
    text-indent: -1em;
+}
+
+header {
+   margin-top: 0px;
+   margin-left: 0px;
+   color: #ffa993;
+   text-indent: -5em;
+   font-size: 20px;
+   padding-bottom: 0px;
+   line-height: 2px;
+}
+
+header p:nth-of-type(2) {
+   text-indent: -4.3em;
 }
