latest fixes and installing online again

--- a/here_now_look/s.css
+++ b/here_now_look/s.css
@@ -11,8 +11,8 @@ body {
   margin: 0% 10%;
   cursor: none;
   color: white;
-  background-color: #69403a;
-  color: white;
+  background-color: #FFFFFF;
+  color: black;
 }
 
 span {
